[tool.poetry]
name = "pytex"
version = "0.3.6"
description = "python ton cex/dex utils"
authors = ["hifided <hifided@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tonsdk = "^1.0.15"
tvm-valuetypes = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
